[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/HallOfFame.gd" type="Script" id=1]
[ext_resource path="res://assets/font_default.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/montserrat_extrabold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://src/UI/LineEdit.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="HalloOfFame" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 232.0
margin_right = 190.0
margin_bottom = 272.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ExitGame"]
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GOTO MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterScore" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 182.0
margin_right = 190.0
margin_bottom = 222.0
color = Color( 0.352941, 0.352941, 0.352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnterScore"]
margin_right = 180.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ENTER SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OmasHood" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 64.618
margin_right = 204.0
margin_bottom = 104.618
rect_rotation = -15.0
color = Color( 0.396078, 0.0235294, 0.0235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OmasHood"]
margin_right = 180.0
margin_bottom = 40.0
rect_rotation = 1.2
size_flags_horizontal = 15
size_flags_stretch_ratio = 1.26
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.678431, 0.741176, 0.270588, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "HALL OF FAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -33.1335
margin_top = 100.707
margin_right = 213.866
margin_bottom = 140.707
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 140.0
margin_right = 190.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 2 )
text = "Your Time:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 266.0
margin_top = 10.0
margin_right = 502.0
margin_bottom = 294.0
grow_horizontal = 0
columns = 3

[node name="Rank" type="Label" parent="GridContainer"]
margin_right = 76.0
margin_bottom = 20.0
size_flags_horizontal = 7
custom_styles/normal = SubResource( 2 )
text = "RANK"
align = 1

[node name="Name" type="Label" parent="GridContainer"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 7
custom_styles/normal = SubResource( 2 )
text = "NAME"
align = 1

[node name="Time" type="Label" parent="GridContainer"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 20.0
size_flags_horizontal = 7
custom_styles/normal = SubResource( 2 )
text = "TIME"
align = 1

[node name="TextRank" type="RichTextLabel" parent="GridContainer"]
margin_top = 24.0
margin_right = 76.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextName" type="RichTextLabel" parent="GridContainer"]
margin_left = 80.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextTime" type="RichTextLabel" parent="GridContainer"]
margin_left = 160.0
margin_top = 24.0
margin_right = 236.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 104.073
margin_top = 96.9325
margin_right = 180.073
margin_bottom = 120.933
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
